I was fundamentally wrong thinking that LinkedList would handle mid-insertions better than ArrayList. 10x better on large datasets.